--- a/cdk-app/buildspec.yml
+++ b/cdk-app/buildspec.yml
@@ -7,11 +7,11 @@ phases:
     commands:
       - npm install -g aws-cdk
       - npm install
+
   build:
     commands:
       - npm run build
-      - npx cdk synth
-      - npx cdk deploy --require-approval never
+      - cdk synth
 
 artifacts:
   files:
